# TTAWin

./: .gitignore  .zshrc  Cargo.toml  DEVELOPMENT.md  README.md  SERVICE_ARCHITECTURE.md  package-lock.json  package.json
scripts/: quick-start.bat  service-debug.bat  service-dev.bat  service-kill.bat  service-manager.ps1  service-test.bat
winapp/: OVERLAY_README.md  package-lock.json  package.json  vite.config.ts
winapp/src/: App.vue  main.ts  quasar-variables.scss  theme.ts
winapp/src-tauri/: Cargo.toml  tauri.conf.json
winapp/src-tauri/src/: api_response.rs  auto_kill.rs  error.rs  lib.rs  main.rs  overlay.rs  service_bridge.rs  service_client.rs  shortcuts.rs  streams.rs  task.rs
winapp/src/composables/: useOverlayControls.ts  useServiceBridge.ts  useSettings.ts
winapp/src/stores/: overlayStore.ts  settingsStore.ts
